force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Type_of_unplanned_Event__c.field-meta.xml
<CustomField>
    <fullName>Type_of_unplanned_Event__c</fullName>
    <description>Description of uplanned event(This field was created for NPL MA).</description>
    <label>Type of unplanned Event:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Injury</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Property damage</fullName>
            </value>
            <value>
                <fullName>Vehicle related</fullName>
            </value>
            <value>
                <fullName>Environmental impact/spill</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>