force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Type_of_unplanned_event_long__c.field-meta.xml
<CustomField>
    <fullName>Type_of_unplanned_event_long__c</fullName>
    <description>Type of unplanned event plus extra spaces for print format(This field was created for NPL MA).</description>
    <formula>IF( INCLUDES(Type_of_unplanned_Event__c, &apos;Injury&apos;), &apos;Injury&apos; &amp; BR(), null) +
IF( INCLUDES(Type_of_unplanned_Event__c, &apos;Quality&apos;), &apos;Quality&apos; &amp; BR(), null) +
IF( INCLUDES(Type_of_unplanned_Event__c, &apos;Property damage&apos;), &apos;Property damage&apos; &amp; BR(), null) +
IF( INCLUDES(Type_of_unplanned_Event__c, &apos;Vehicle related&apos;), &apos;Vehicle related&apos; &amp; BR(), null) +
IF( INCLUDES(Type_of_unplanned_Event__c, &apos;Environmental impact/spill&apos;), &apos;Environmental impact/spill&apos; &amp; BR(), null) +
IF( INCLUDES(Type_of_unplanned_Event__c, &apos;Other&apos;), &apos;Other&apos;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of unplanned event long</label>
    <type>Text</type>
</CustomField>