force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Verify_competent_person_inspect_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Verify_competent_person_inspect_checkbox__c</fullName>
    <description>Flag for verify competent person(This field was created for NPL MA).</description>
    <formula>IF( ISPICKVAL(Verify_competent_person_inspects_all_exc__c,&apos;Yes&apos;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verify competent person inspect checkbox</label>
    <type>Checkbox</type>
</CustomField>