force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Verify_competent_person_inspects_all_exc__c.field-meta.xml
<CustomField>
    <fullName>Verify_competent_person_inspects_all_exc__c</fullName>
    <description>Text of the flag for verify competent person(This field was created for NPL MA).</description>
    <label>Verify competent person inspects all exc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>