force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Verify_environmental_controls_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Verify_environmental_controls_checkbox__c</fullName>
    <description>Flag for verify envt controls(This field was created for NPL MA).</description>
    <formula>IF(   Verify_environmental_controls_inspected__c   =&apos;Yes&apos;, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verify environmental controls checkbox</label>
    <type>Checkbox</type>
</CustomField>