force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Verify_environmental_controls_inspected__c.field-meta.xml
<CustomField>
    <fullName>Verify_environmental_controls_inspected__c</fullName>
    <description>Text of the flag for verify envt controls(This field was created for NPL MA).</description>
    <label>Verify environmental controls inspected</label>
    <length>10</length>
    <type>Text</type>
</CustomField>