force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Verify_everyone_is_fit_for_duty__c.field-meta.xml
<CustomField>
    <fullName>Verify_everyone_is_fit_for_duty__c</fullName>
    <description>Text of the flag for verify envt controls(This field was created for NPL MA).</description>
    <label>Verify everyone is fit for duty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>