force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Verify_everyone_is_fit_for_duty_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Verify_everyone_is_fit_for_duty_Checkbox__c</fullName>
    <description>Flag for verify envt controls(This field was created for NPL MA).</description>
    <formula>IF( ISPICKVAL(Verify_everyone_is_fit_for_duty__c,&apos;Yes&apos;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verify everyone is fit for duty Checkbox</label>
    <type>Checkbox</type>
</CustomField>