force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Verify_hazard_controls_are_understood_by__c.field-meta.xml
<CustomField>
    <fullName>Verify_hazard_controls_are_understood_by__c</fullName>
    <description>Text of the flag for verify hazard controls(This field was created for NPL MA).</description>
    <label>Verify hazard controls are understood by</label>
    <length>10</length>
    <type>Text</type>
</CustomField>