force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Verify_hazard_controls_understood_check__c.field-meta.xml
<CustomField>
    <fullName>Verify_hazard_controls_understood_check__c</fullName>
    <description>Flag for verify hazard controls(This field was created for NPL MA).</description>
    <formula>IF(   Verify_hazard_controls_are_understood_by__c   =&apos;Yes&apos;, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verify hazard controls understood check</label>
    <type>Checkbox</type>
</CustomField>