force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Verify_OQ_are_valid_for_tasks_to_be_perf__c.field-meta.xml
<CustomField>
    <fullName>Verify_OQ_are_valid_for_tasks_to_be_perf__c</fullName>
    <description>Text of the flag for verify OQ(This field was created for NPL MA).</description>
    <label>Verify OQ are valid for tasks to be perf</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>