force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/verify_oq_checkbox__c.field-meta.xml
<CustomField>
    <fullName>verify_oq_checkbox__c</fullName>
    <description>Text of the flag for verify oq(This field was created for NPL MA).</description>
    <formula>IF( ISPICKVAL(Verify_OQ_are_valid_for_tasks_to_be_perf__c,&apos;Yes&apos;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>verify oq checkbox</label>
    <type>Checkbox</type>
</CustomField>