force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Verify_that_public_hazards_obstruction__c.field-meta.xml
<CustomField>
    <fullName>Verify_that_public_hazards_obstruction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Text of the flag for verify public hazards(This field was created for NPL MA).</description>
    <label>Verify that public hazards &amp; obstruction</label>
    <type>Checkbox</type>
</CustomField>