force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Verify_that_the_work_area_equipment_ar__c.field-meta.xml
<CustomField>
    <fullName>Verify_that_the_work_area_equipment_ar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Text of the flag for verify work area(This field was created for NPL MA).</description>
    <label>Verify that the work area &amp; equipment ar</label>
    <type>Checkbox</type>
</CustomField>