force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Visitor2__c.field-meta.xml
<CustomField>
    <fullName>Visitor2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key to the visitor details object(This field was created for NPL MA).</description>
    <label>Visitor2</label>
    <referenceTo>Visitor_Details__c</referenceTo>
    <relationshipName>SDOCS_Answers1</relationshipName>
    <type>Lookup</type>
</CustomField>