force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Visitor3__c.field-meta.xml
<CustomField>
    <fullName>Visitor3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key to the visitor details object(This field was created for NPL MA).</description>
    <label>Visitor3</label>
    <referenceTo>Visitor_Details__c</referenceTo>
    <relationshipName>SDOCS_Answers2</relationshipName>
    <type>Lookup</type>
</CustomField>