force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Walk_Down_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Walk_Down_Completed_By__c</fullName>
    <description>Name of the person who did the walk down(This field was created for NPL MA).</description>
    <label>Walk Down Completed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>