force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/WBS_Number__c.field-meta.xml
<CustomField>
    <fullName>WBS_Number__c</fullName>
    <description>WBS Number(This field was created for NPL MA).</description>
    <label>WBS Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>