force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Weather__c.field-meta.xml
<CustomField>
    <fullName>Weather__c</fullName>
    <description>Weather Description(This field was created for NPL MA).</description>
    <label>Weather Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>