force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Weather_Conditions_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Weather_Conditions_Forecast__c</fullName>
    <description>Weather Conditions Forecast(This field was created for NPL MA).</description>
    <label>Weather Conditions Forecast</label>
    <length>80</length>
    <type>Text</type>
</CustomField>