force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Weather_Conditions_Forecast_Formula__c.field-meta.xml
<CustomField>
    <fullName>Weather_Conditions_Forecast_Formula__c</fullName>
    <description>Required for ADO 44591 - form data refreshing issue after automation runs.</description>
    <formula>Weather_Conditions_Forecast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weather Conditions Forecast Formula</label>
    <type>Text</type>
</CustomField>