force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Were_internal_notifications_documentat__c.field-meta.xml
<CustomField>
    <fullName>Were_internal_notifications_documentat__c</fullName>
    <description>Text of the flag for internal notifications(This field was created for NPL MA).</description>
    <label>Were internal notifications &amp; documentat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>