force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/What_was_learned_from_yesterday_s_Think__c.field-meta.xml
<CustomField>
    <fullName>What_was_learned_from_yesterday_s_Think__c</fullName>
    <description>Description of what was learned from yesterday(This field was created for NPL MA).</description>
    <label>What was learned from yesterday&apos;s Think</label>
    <length>255</length>
    <type>Text</type>
</CustomField>