force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Who_will_meet_Emergency_Responders__c.field-meta.xml
<CustomField>
    <fullName>Who_will_meet_Emergency_Responders__c</fullName>
    <description>Name of the person who will meet emer responders(This field was created for NPL MA).</description>
    <label>Who will meet Emergency Responders</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>