force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Wind__c.field-meta.xml
<CustomField>
    <fullName>Wind__c</fullName>
    <description>Wind direction(This field was created for NPL MA).
22304 - Field Label updated to avoid ambiguity.</description>
    <label>Wind direction from API</label>
    <length>80</length>
    <type>Text</type>
</CustomField>