force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Wind_Direction__c.field-meta.xml
<CustomField>
    <fullName>Wind_Direction__c</fullName>
    <description>22304</description>
    <label>Wind Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>South East</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>South West</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>North West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>