force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Wind_Direction_Formula__c.field-meta.xml
<CustomField>
    <fullName>Wind_Direction_Formula__c</fullName>
    <formula>TEXT(Wind_Direction__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wind Direction Formula</label>
    <type>Text</type>
</CustomField>