force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Wind_Speed__c.field-meta.xml
<CustomField>
    <fullName>Wind_Speed__c</fullName>
    <description>Wind Speed(This field was created for NPL MA).</description>
    <label>Wind Speed</label>
    <length>80</length>
    <type>Text</type>
</CustomField>