force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipName>NPL_JHA_for_SDOCS</relationshipName>
    <type>Lookup</type>
</CustomField>