force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Yellow_zone_established__c.field-meta.xml
<CustomField>
    <fullName>Yellow_zone_established__c</fullName>
    <description>Text of the flag for yellow zone established(This field was created for NPL MA).</description>
    <label>Yellow zone established</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>