force-app/main/default/objects/NPL_JHA_for_SDOCS__c/validationRules/Prevent_NPL_JHA_Altering_after_Locked_Fo.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_NPL_JHA_Altering_after_Locked_Fo</fullName>
    <active>true</active>
    <description>BA: NPLMA - used to prevent the editing of NPL JHA records that have a related Locked JHA form.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Form__c)),
    Form__r.disco__Status__c =&apos;Locked&apos;,
			 $Profile.Name&lt;&gt;&apos;System Administrator&apos;,
				$Profile.Name&lt;&gt;&apos;Integration User&apos;,
				NOT(ISCHANGED(Weather_Conditions_Forecast__c)),  
				NOT(ISCHANGED(Weather__c)),
    NOT(ISCHANGED(Wind__c)),
				NOT(ISCHANGED(Wind_Speed__c)),
				NOT(ISCHANGED(Feels_Like__c)),
    NOT(ISCHANGED(Temperature__c)),			  	
				NOT(ISCHANGED(Nearest_Emergency_Medical_Facility__c ))
				)</errorConditionFormula>
    <errorMessage>You are not allowed to update this record since it has been locked.</errorMessage>
</ValidationRule>