force-app/main/default/objects/NPL_JHA_for_SDOCS__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Form_Status__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Address__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Form__c</columns>
    <columns>PDF_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>